fixed some layout issues

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 1000px;
+    height: 100vh;
 
 }
 
@@ -49,6 +49,8 @@ input[type=text] {
     border: none;
     border-bottom: 1px solid black;
     margin-right: 10px;
+    padding: 4px 6px;
+    padding: 8px;
 }
 
 input[type=text]:focus {
@@ -57,7 +59,7 @@ input[type=text]:focus {
 
 input[type=button] {
     color: black;
-    padding: 5px;
+    padding: 8px;
     background-color: white;
     border: 2px solid black;
 }
@@ -67,6 +69,12 @@ input[type=button]:hover {
 }
 
 @media only screen and (max-width: 730px) {
+
+    body{
+        margin-top: 200px;
+        display: flex;
+        align-items: flex-start;
+    }
     .sign-up p{
         width: 400px;
     }
